@@ -1,3 +1,7 @@
+2008-08-17  higepon  <higepon@users.sourceforge.jp>
+
+        * scheme.cpp : Removed TypedVector.cpp
+
 2008-08-16  higepon  <higepon@users.sourceforge.jp>
 
         * freeproc.cpp (scheme::procedurePEx): Removed typdevector stuff.
